# claude-meter

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_BITBUCKET.md  SPEC.md  install.ps1  install.sh  install_bitbucket.ps1.tmpl  install_bitbucket.sh.tmpl  pyproject.toml
.github/workflows/: release-please.yml
docs/superpowers/plans/: 2026-07-08-claude-meter.md  2026-07-17-launcher-debug-mode.md
docs/superpowers/specs/: 2026-07-07-claude-meter-design.md  2026-07-17-launcher-debug-mode-design.md
scripts/launchers/: claude-meter-debug.bat.tmpl  claude-meter-debug.command.tmpl  claude-meter.bat.tmpl  claude-meter.command.tmpl  claude-meter.desktop.tmpl  claude-meter.vbs.tmpl  install.py
scripts/launchers/claude-meter.app/Contents/: Info.plist.tmpl
scripts/launchers/claude-meter.app/Contents/MacOS/: claude-meter.tmpl
src/claude_meter/: __init__.py  cli.py  collector.py  config.py  cost.py  db.py  model_normalizer.py  models.py  pricing.py  pricing_fallback.json  report.py  version.py  watcher.py
src/claude_meter/ui/: app.py  config_page.py  model_breakdown.py  overview.py  pricing_settings.py  project_breakdown.py  session_explorer.py
tests/: conftest.py  test_cli.py  test_collector.py  test_config.py  test_cost.py  test_db.py  test_integration.py  test_launcher_install.py  test_model_normalizer.py  test_models.py  test_pricing.py  test_report.py  test_ui.py  test_ui_config_page.py  test_ui_overview.py  test_ui_pages.py  test_version.py  test_watcher.py
