[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-meter"
version = "0.2.2"
description = "Local ClaudeCode usage and cost analyzer"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Yusuke Ohi"}
]
dependencies = [
    "streamlit>=1.49",
    "watchdog>=4.0",
    "requests>=2.31",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "altair>=5.3",
    "plotly>=5.22",
    # pandas<3: pandas 3.x defaults string columns to a PyArrow-backed StringDtype,
    # which triggers native SIGSEGV crashes in libarrow.so when Streamlit serializes
    # certain DataFrames to Arrow (see streamlit/streamlit#14609, #14617). Pin below 3
    # until the ecosystem (streamlit/pyarrow) stabilizes this interaction.
    "pandas>=2.2,<3",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
claude-meter = "claude_meter.cli:main"
cm = "claude_meter.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_meter"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
strict = true

[[tool.mypy.overrides]]
module = ["yaml", "pandas"]
ignore_missing_imports = true
